--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,7 +41,8 @@
             <span class="badge badge-danger" id="globalDeaths" data-toggle="tooltip" data-placement="top" title="Global Deaths"></span>
             <span class="badge badge-success" id="globalRecovered" data-toggle="tooltip" data-placement="top" title="Global Recoveries"></span>
             <hr>
-            <button
+            <a tabindex="0"
+            role="button"
             id="contactLink"
             class="btn btn-sm btn-outline-light"
             data-toggle="popover"
@@ -49,7 +50,7 @@
             title="Is there something wrong?"
             data-content="Please only send an email if there is something wrong with the data shown in the map. Email: malakopitouras1234@hotmail.com">
                 Contact
-            </button>
+            </a>
         </div>
 
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
