--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,12 @@
         <title>Covid-19 Global Map</title>
         <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
         <meta charset="utf-8">
+
+        <link rel="apple-touch-icon" sizes="180x180" href="/static/favicon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon/favicon-16x16.png">
+        <link rel="manifest" href="/static/site.webmanifest">
+
         <!--<meta http-equiv="refresh" content="60; URL=/">-->
         <style>
         /* Always set the map height explicitly to define the size of the div
