--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,7 +37,7 @@
         <input type="hidden" id="all" value="<%= JSON.stringify(all); %>">
         <input type="hidden" id="countries" value="<%= JSON.stringify(countries); %>">
 
-        <span class="badge badge-primary" style="margin:5px;" data-toggle="tooltip" data-placement="right" title="Made by Stam">Covid-19 Global Map Spread</span>
+        <span class="badge badge-primary" style="margin:5px;" data-toggle="tooltip" data-placement="right" title="Made by Stamatis">Covid-19 Global Map Spread</span>
         <div id="map"></div>
 
         <div class="bottom" style="padding:5px;">
