--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,7 +35,8 @@
     </head>
     <body style="background-color:#383f47;">
 
-        <!-- about -->
+        <!-- about modal -->
+
         <div class="modal fade" id="aboutModal" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
@@ -58,6 +59,8 @@
                 </div>
             </div>
         </div>
+
+        <!-- map -->
 
         <input type="hidden" id="all" value="<%= JSON.stringify(all); %>">
         <input type="hidden" id="countries" value="<%= JSON.stringify(countries); %>">
