--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,9 +28,8 @@
                     </div>
                     <div class="modal-body">
                         <p>
-                            Made using the <a href="https://github.com/NovelCOVID/API" target="_blank">NovelCOVID API</a>
-                            <br>
-                            Join their discord <a href="https://discord.gg/EvbMshU" target="_blank">here</a>
+                            Made using the <a href="https://disease.sh/" target="_blank">disease.sh API</a>
+                            <small class="text-muted">(before NovelCOVID)</small>
                         </p>
                     </div>
                     <div class="modal-footer">
@@ -44,7 +43,7 @@
         <input type="hidden" id="all" value="<%= JSON.stringify(all); %>">
         <input type="hidden" id="countries" value="<%= JSON.stringify(countries); %>">
 
-        <span class="badge badge-primary" style="margin:5px;" data-toggle="tooltip" data-placement="right" title="Made using the NovelCOVID API">
+        <span class="badge badge-primary" style="margin:5px;" data-toggle="tooltip" data-placement="right" title="Made using the disease.sh API">
             Covid-19 Global Map Spread
         </span>
 
