--- a/views/index.ejs
+++ b/views/index.ejs
@@ -56,7 +56,7 @@
 
             <hr>
 
-            <button type="button" class="btn btn-outline-light" data-toggle="modal" data-target="#aboutModal">
+            <button type="button" class="btn btn-outline-light btn-sm" data-toggle="modal" data-target="#aboutModal">
                 About
             </button>
         </div>
